# c-scratch-convolution-network

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  matrix.cpp  matrix.h  preprocessing.cpp  preprocessing.h  run.cpp  run.h  testing.txt  vcpkg.json
